layout and style musings. address body overflow issue

--- a/src/stylesheets/base/_elements.scss
+++ b/src/stylesheets/base/_elements.scss
@@ -1,5 +1,9 @@
 body {
   background: #b2b2b2;
+  
+  &.active {
+    overflow: hidden;
+  }
 }
 
 img {
